--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha -R spec"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,19 @@
     "sailshook",
     "hook"
   ],
+  "devDependencies": {
+    "mocha": "^3.5.0",
+    "sails": "~0.11.0",
+    "should": "^11.2.1",
+    "sinon": "^2.4.1"
+  },
   "author": "Francisco Javier Márquez Cortés",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/ratrabbit/sails-hook-ohmytasks/issues"
   },
-  "homepage": "https://github.com/ratrabbit/sails-hook-ohmytasks#readme"
+  "homepage": "https://github.com/ratrabbit/sails-hook-ohmytasks#readme",
+  "dependencies": {
+    "include-all": "^4.0.3"
+  }
 }
